<resources>
    <string name="app_name">GPS-basedChatApp</string>
    <string name="action_settings">Settings</string>
    <string name="back">Back</string>
    <string name="location_obtained">Location Obtained</string>
    <string name="submit">Submit</string>
    <string name="type_here">type here</string>
    <string name="title_activity_map">Map</string>
    <string name="map">Map</string>
    <string name="messages">Messages</string>
    <string name="new_message">new message</string>
</resources>
