<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_message"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.martin.gps_basedchatapp.NewMessage">

    <Button
        android:text="@string/submit"
        android:layout_height="wrap_content"
        android:id="@+id/Submit_button"
        android:layout_below="@+id/message_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="250dp"
        android:layout_toRightOf="@+id/Back_button"
        android:layout_toEndOf="@+id/Back_button"
        android:visibility="invisible"
        android:onClick="messagesubmit" />

    <Button
        android:text="@string/back"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/Back_button"
        android:onClick="mainscreen (NewMessage)"
        android:layout_width="200dp" />

    <EditText
        android:ems="10"
        android:id="@+id/message_text"
        android:inputType="text"
        android:layout_width="1000dp"
        tools:background="?attr/colorControlHighlight"
        android:textAlignment="center"
        android:layout_height="100dp"
        android:maxLines="1"
        android:hint="@string/type_here"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
