<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/main_screen"
    tools:context="com.example.martin.gps_basedchatapp.Main">

    <Button
        android:text="@string/new_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="83dp"
        android:id="@+id/newmessagescreen_button"
        tools:ignore="UnknownId"
        android:onClick="newmessagescreen" />

    <Button
        android:text="@string/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Mapscreen_button"
        android:onClick="mapscreen"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/newmessagescreen_button"
        android:layout_alignStart="@+id/newmessagescreen_button"
        android:layout_alignRight="@+id/newmessagescreen_button"
        android:layout_alignEnd="@+id/newmessagescreen_button" />

    <Button
        android:text="@string/messages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/messagesscreen_button"
        android:onClick="messagesscreen"
        android:layout_marginBottom="69dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/Mapscreen_button"
        android:layout_alignStart="@+id/Mapscreen_button"
        android:layout_alignRight="@+id/Mapscreen_button"
        android:layout_alignEnd="@+id/Mapscreen_button" />
</RelativeLayout>
